<resources>
    <string name="app_name">Mobile Challenge</string>

    <string name="currencies_conversion">Conversão de moedas</string>
    <string name="currencies_list">Listagem de moedas</string>
    <string name="currencies_search">Busca de moedas</string>


    <string name="convert_values">Converter valores</string>
    <string name="available_currencies">Moedas disponíveis</string>
    <string name="error">Oops, parece que ocorreu um erro ao carregar os dados</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="exit">Sair</string>
    <string name="value">Valor</string>
    <string name="text_select_input">Moeda de entrada:</string>
    <string name="text_select_output">Moeda de saída</string>
    <string name="convert">Converter</string>
    <string name="type_code">Digite o código da moeda</string>
    <string name="search">Buscar</string>
    <string name="usd">USD</string>
    <string name="five">5,50</string>
    <string name="search_new_currency">Buscar nova moeda</string>
    <string name="action_try_again">Tentar novamente</string>
</resources>
