<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TryAgainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    <TextView
        android:id="@+id/TextViewTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/error"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTryAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/try_again"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonExit"
        app:layout_constraintTop_toBottomOf="@id/TextViewTryAgain"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonExit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/exit"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/buttonTryAgain"
        app:layout_constraintTop_toTopOf="@id/buttonTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/buttonTryAgain"/>

</androidx.constraintlayout.widget.ConstraintLayout>